#182 japicmp can be build under jdk 1.9